Fixed topnav .right spacing issue

--- a/src/styles/modules/topnav-layout.less
+++ b/src/styles/modules/topnav-layout.less
@@ -22,7 +22,7 @@
     width: @right-width;
     margin-right: 16px;
 
-    @media @small {
+    @media @medium {
       margin-right: 0;
     }
   }
